--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                         <!-- Twitter Widget -->
                         <div class="row">
                             <div class="box-255">
-                                <a class="twitter-timeline" href="https://twitter.com/CrispinMulberry" data-widget-id="473927277571354624">Tweets by @CrispinMulberry</a>
+                                <a class="twitter-timeline" href="https://twitter.com/CrispinMulberry" data-widget-id="473927277571354624" data-tweet-limit="3">Tweets by @CrispinMulberry</a>
                                 <script>
                                     ! function (d, s, id) {
                                         var js, fjs = d.getElementsByTagName(s)[0],
