added left ribbon overlay

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <div class="lcol">
                         <div class="row">
                         <!-- Browse Categories -->
-                            <div class="box-195">
+                            <div id="categories" class="box-185">
                                 <h2>browse categories</h2>
 
                                 <!-- Popular Destinations -->
@@ -124,9 +124,12 @@
                                     <li><a href="#">All Vacations</a></li>
                                 </ul>
                             </div>
-        
+
+                            <!-- Spacer -->
+                            <div class="box-20">&nbsp;</div>  
+
                             <!-- Recent Articles -->
-                            <div class="box-470">
+                            <div class="box-460">
                                 <h2>recent articles</h2>
 
                                 <article>
@@ -161,10 +164,10 @@
 
 
                             <div class="row">
-                                <div class="box-full">
+                                <div id="videos" class="box-full">
                                     <!-- POPULAR VIDEOS -->
                                     <h2>popular videos</h2>
-                                    <ul class="videos">
+                                    <ul>
                                         <li>
                                             <a href="#">
                                                 <img src="./images/videos/video-1.jpg" alt="Team Mongoose" />
@@ -284,6 +287,7 @@
                     </div>
                     <!-- END: Right Column -->
                 </div>
+                <div class="clearfix"></div>
             </div>
 
             <!-- START: Footer -->
