done just need to browser test

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <div class="row">
                         <!-- Browse Categories -->
                             <div id="categories" class="box-185">
-                                <h2>browse categories</h2>
+                                <h2 class="icon-categories">browse categories</h2>
 
                                 <!-- Popular Destinations -->
                                 <h3><a href="#">Popular Destinations</a></h3>
@@ -130,7 +130,7 @@
 
                             <!-- Recent Articles -->
                             <div class="box-460">
-                                <h2>recent articles</h2>
+                                <h2 class="icon-articles">recent articles</h2>
 
                                 <article>
                                     <!-- Article 1 -->
@@ -166,7 +166,9 @@
                             <div class="row">
                                 <div id="videos" class="box-full">
                                     <!-- POPULAR VIDEOS -->
-                                    <h2>popular videos</h2>
+                                    <h2 class="icon-video">
+                                        popular videos
+                                    </h2>
                                     <ul>
                                         <li>
                                             <a href="#">
@@ -217,7 +219,7 @@
                             <div class="grayBox">
                                 <form>
                                     <!-- Newsletter Sign Ups -->
-                                    <h2>sign up for our newsletter</h2>
+                                    <h2 class="icon-signup">sign up for our newsletter</h2>
                                     <input type="email" placeholder="user@domain.com">
             
                                     <legend>
@@ -244,7 +246,7 @@
                         <div id="contests" class="box-255">
                             <div class="grayBox">
                                 <!-- Current Contests -->
-                                <h2>current contests</h2>
+                                <h2 class="icon-contests">current contests</h2>
                                 <section>
                                     <aside>
                                         <img src="./images/contests/contest-1.jpg">
