downgraded jquery and more ie issues

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
-<!doctype html>
-<html class="no-js">
+<!DOCTYPE html>
+<!--[if IEMobile 7 ]> <html dir="ltr" lang="en-US"class="no-js iem7 ie"> <![endif]-->
+<!--[if lt IE 7 ]> <html dir="ltr" lang="en-US" class="no-js ie6 oldie"> <![endif]-->
+<!--[if IE 7 ]>    <html dir="ltr" lang="en-US" class="no-js ie7 oldie"> <![endif]-->
+<!--[if IE 8 ]>    <html dir="ltr" lang="en-US" class="no-js ie8 oldie"> <![endif]-->
+<!--[if (gte IE 9)|(gt IEMobile 7)|!(IEMobile)|!(IE)]><!--><html dir="ltr" lang="en-US" class="no-js"><!--<![endif]-->
 <head>
     <meta charset="utf-8">
     <title>Nerdery Assessment Test</title>
@@ -318,7 +322,7 @@
         <!-- END: Footer -->
     </div>
 
-    <script src="./bower_components/jquery/dist/jquery.js"></script>
+    <script src="./bower_components/jquery/dist/jquery.min.js"></script>
     <script src="./bower_components/jquery-cycle2/build/jquery.cycle2.js"></script>
 
     <script src="./js/main.js"></script>
